<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">EMOM</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Configuracion</string>

    <string name="label_inicio">Inicio</string>
    <string name="label_historico">Historico</string>
    <string name="label_compartir">Compartir</string>
    <string name="label_desarrollador">Desarrollador</string>
    <string name="label_acerca">Acerca de</string>
    <string name="label_en_construccion_1">Esta funcionalidad</string>
    <string name="label_en_construccion_2">se encuentra</string>
    <string name="label_en_construccion_3">en desarrollo</string>
    <string name="label_repeticiones">Repeticiones</string>
    <string name="label_voz">Conteo por voz</string>
    <string name="label_pantalla">Pantalla activa</string>
    <string name="label_activada">Activada</string>
    <string name="label_desactivada">Desactivada</string>
    <string name="label_si">Si</string>
    <string name="label_no">No</string>
</resources>
